--- a/src/app/template/basicos/basicos.component.html
+++ b/src/app/template/basicos/basicos.component.html
@@ -1,1 +1,84 @@
-<p>basicos works!</p>
+<h2>Template: Básicos</h2>
+
+<div class="row">
+    <div class="col">
+        <!-- esto es referencia local #miForm -->
+        <form action="" 
+        (ngSubmit)="guardar()" 
+        #miForm="ngForm" 
+        autocomplete="off">
+
+            <!-- Campo producto -->
+            <!-- En el input el ngmodel por fuerza debe ir acompañado de un name -->
+            <div class="mb-3 row">
+                <label for="" class="col-sm-3 col-form-label">Producto</label>
+                <div class="col-sm-9">
+                    <input type="text" 
+                    class="form-control" 
+                    [ngModel]="initForm.producto" 
+                    name="producto" 
+                    placeholder="Nombre del producto"
+                    required 
+                    minlength="3">
+                    <!-- para hacer que el mensaje aparezca solo cuando es necesario podemos utilizar un ngIf -->
+                    <span class="form-text text-danger" 
+                    *ngIf='nombreValido()'>
+                        Debe ser de 3 letras</span>
+                </div>
+
+            </div>
+            <!-- Campo del precio -->
+            <div class="mb-3 row">
+                <label for="" class="col-sm-3 col-form-label">Precio</label>
+                <div class="col-sm-9">
+                    <input type="number" class="form-control" [ngModel]="initForm.precio" name="precio" placeholder="Precio del producto"
+                        required min="0">
+                    <span class="form-text text-danger" *ngIf='precioValido()'>
+                        El precio debe ser 0 o mayor a 0
+                    </span>
+                </div>
+
+                <!-- Campo de existencias -->
+            </div>
+            <div class="mb-3 row">
+                <label for="" class="col-sm-3 col-form-label">Existencias</label>
+                <div class="col-sm-9">
+                    <input type="number" class="form-control"
+                    [ngModel]="initForm.existencia"
+                     name="existencia"
+                    customMin [minimo]='0'
+                    placeholder="Existencias del producto"
+                    required>
+                </div>
+
+            </div>
+
+            <!-- Boton submit -->
+            <div class="row">
+                <div class="col">
+                    <button type="submit" 
+                    class="btn btn-primary float-right" 
+                    [disabled]="miForm.invalid">
+                        Guardar
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<!-- Mostrar  información del formulario-->
+<div class="row">
+    <div class="col">
+        <span>valid</span>
+        <pre>{{miForm.valid}}</pre>
+        <hr>
+        <span>Pristine</span>
+        <pre>{{miForm.pristine}}</pre>
+        <hr>
+        <span>Touched</span>
+        <pre>{{miForm.touched}}</pre>
+        <hr>
+        <span>value</span>
+        <pre>{{miForm.value |json}}</pre>
+    </div>
+</div>
