--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -1,1 +1,66 @@
-<p>dinamicos works!</p>
+<h2>Template: <small>Dinámicos</small></h2>
+<hr>
+<form action="" 
+(ngSubmit)="guardar()"
+#miForm="ngForm"
+autocomplete="off">
+<!-- Nombre -->
+    <div class=" mb-3 row">
+        <label for="" class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+            <input type="text" 
+            class="form-control" 
+            [ngModel]="persona.nombre"
+            name="nombre"
+            placeholder="Nombre de la persona"
+            required
+            minlength="3">
+            <span class="form-text text-danger" 
+            *ngIf='miForm.controls.nombre?.touched
+            && miForm.controls.nombre?.value.length < 3'>
+                Debe contener al menos 3 letras </span>
+        </div>
+    </div>
+
+    <!-- Agregar -->
+    <div class=" mb-3 row">
+        <label for="" class="col-sm-3 col-form-label">Agregar</label>
+        <div class="col-sm-9">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Agregar favorito" [(ngModel)]="nuevoJuego" (keyup.enter)="agregarJuego()" name="nuevoJuego">
+                <button class="btn btn-outline-primary" type="button" (click)="agregarJuego()">Agregar</button>
+              </div>
+        </div>
+    </div>
+
+    <!-- Juegos favoritos -->
+    <div class=" mb-3 row">
+        <label for="" class="col-sm-3 col-form-label">Favoritos</label>
+        <div class="col-sm-9 " >
+            <div class="input-group mb-1" *ngFor="let juego of persona.favoritos; let i = index">
+                <input 
+                [(ngModel)]="juego.nombre"
+                name="favorito_{{i}}"
+                 class="form-control "
+                 required
+                 >
+                <button class="btn btn-outline-danger " type="button" (click)="eliminar(i)">Eliminar</button>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <button type="button"
+            class="btn btn-primary float-right" 
+            (click)="guardar()"
+            [disabled]="miForm.invalid">
+                Guardar
+            </button>
+        </div>
+    </div>
+</form>
+
+<span>persona</span>
+<pre>persona | {{ persona | json }}</pre>
