--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,90 @@
-<p>basicos works!</p>
+<h2>Reactivo: Básicos</h2>
+
+<div class="row">
+    <div class="col">
+        <!-- ]Para utilizar formularios reactivos es necesario utilizar la propiedad de Angular
+        FormGrup a la cual le debemos pasar la propiedad creada en nuestro .ts en este caso llamada miForm -->
+        <form (ngSubmit)="guardar()" action="" [formGroup]="miForm"
+        autocomplete="off">
+
+            <!-- Campo producto -->
+            <!-- el formControlName debe ser el mismo que es desde el .ts osea debe tener el mismo nombre
+            esto traera los valores que esten relacionados  -->
+
+            <div class="mb-3 row">
+                <label for="" class="col-sm-3 col-form-label">Producto</label>
+                <div class="col-sm-9">
+                    <input type="text" 
+                    class="form-control" 
+                    formControlName="nombre"
+                    placeholder="Nombre del producto">
+                    <!-- para hacer que el mensaje aparezca solo cuando es necesario podemos utilizar un ngIf -->
+                    <span class="form-text text-danger" 
+                    *ngIf="CampoNoEsValido('nombre')">
+                        Debe ser de 3 letras</span>
+                </div>
+
+            </div>
+
+
+            <!-- Campo del precio -->
+            <div class="mb-3 row">
+                <label for="" class="col-sm-3 col-form-label">Precio</label>
+                <div class="col-sm-9">
+                    <input type="number" 
+                    class="form-control"  
+                    formControlName="precio"
+                    placeholder="Precio del producto">
+                    <span class="form-text text-danger" *ngIf="CampoNoEsValido('precio')">
+                        El precio debe ser 0 o mayor a 0
+                    </span>
+                </div>
+
+                <!-- Campo de existencias -->
+            </div>
+            <div class="mb-3 row">
+                <label for="" class="col-sm-3 col-form-label">Existencias</label>
+                <div class="col-sm-9">
+                    <input type="number" 
+                    class="form-control"
+                    formControlName="existencias"
+                    placeholder="Existencias del producto">
+                    <span class="form-text text-danger" *ngIf="CampoNoEsValido('existencias')">
+                        El precio debe ser 0 o mayor a 0
+                    </span>
+                </div>
+
+            </div>
+
+            <!-- Boton submit -->
+            <div class="row">
+                <div class="col">
+                    <button type="submit" 
+                    class="btn btn-primary float-right"
+                   >
+                        Guardar
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<!-- Mostrar  información del formulario-->
+<div class="row">
+    <div class="col">
+        <span>valid</span>
+        <pre>{{miForm.valid}}</pre>
+        <hr>
+        <span>Pristine</span>
+        <pre>{{miForm.pristine}}</pre>
+        <hr>
+        <span>Touched</span>
+        <pre>{{miForm.touched}}</pre>
+        <hr>
+        <span>value</span>
+        <pre>{{miForm.value |json}}</pre>
+        <hr>
+        <span>Precio</span>
+        <pre>{{miForm.controls.precio.errors |json}}</pre>
+    </div>
+</div>
