--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,74 @@
-<p>dinamicos works!</p>
+<h2>Reactivo: <small>Dinámicos</small></h2>
+<hr>
+<form (ngSubmit)="guardar()" 
+action="" 
+[formGroup]="miForm"
+autocomplete="off">
+<!-- Nombre -->
+    <div class=" mb-3 row">
+        <label for="" class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+            <input type="text" 
+            class="form-control" 
+            formControlName="nombre"
+            placeholder="Nombre de la persona">
+
+            <span class="form-text text-danger"
+            *ngIf="CampoNoEsValido('nombre')">
+                Debe contener al menos 3 letras 
+            </span>
+        </div>
+    </div>
+
+    <!-- Agregar -->
+    <div class=" mb-3 row">
+        <label for="" class="col-sm-3 col-form-label">Agregar</label>
+        <div class="col-sm-9">
+
+            <div class="input-group">
+
+                <input type="text" 
+                class="form-control" 
+                placeholder="Agregar favorito"
+                [formControl]="nuevoFavorito"
+                (keyup.enter)="agregarFavorito()">
+
+                <button class="btn btn-outline-primary" 
+                type="button" (click)="agregarFavorito()">
+                Agregar
+                </button>
+                 
+            </div>
+        </div>
+    </div>
+
+    <!-- Juegos favoritos -->
+    <div class=" mb-3 row">
+        <label for="" class="col-sm-3 col-form-label">Favoritos</label>
+        <div class="col-sm-9 " formArrayName="favoritos">
+            <div class="input-group mb-1" *ngFor="let favorito of favoritosArr.controls; let i=index">
+                <input class="form-control"
+                [formControlName]="i">
+
+                <button class="btn btn-outline-danger" 
+                type="button" 
+                (click)="borrar(i)">
+                Eliminar
+            </button>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <button type="submit"
+            class="btn btn-primary float-right">
+                Guardar
+            </button>
+        </div>
+    </div>
+</form>
+
+<!-- <span>persona</span>
+<pre>persona | {{ persona | json }}</pre> -->
