--- a/src/app/shared/sidemenu/sidemenu.component.html
+++ b/src/app/shared/sidemenu/sidemenu.component.html
@@ -19,3 +19,13 @@
         {{item.texto}}
     </li>
 </ul>
+<h2 class="mt-3">Valicadiones</h2>
+<hr>
+<ul class="list-group" >
+    <li *ngFor="let item of authMenu"
+        class="list-group-item" 
+        [routerLink]="[item.ruta]"
+        routerLinkActive="active">
+        {{item.texto}}
+    </li>
+</ul>
